--- a/research/index.html
+++ b/research/index.html
@@ -4,12 +4,13 @@
         <meta name=generator content="Hugo 0.135.0">
         <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
-        <title>Research | RV Lab</title>
+        <title>Research | QuaIL</title>
         <link rel=stylesheet href=../main.css>
+        <base target="_blank">
     </head>
     <body>
         <nav aria-label="main navigation" class="header">
-            <a class="brand" href="/">RV Lab</a>
+            <a href="/" target="_self"><img src="../assets/quail.svg" alt="QuaIL Logo" class="brand" ></a>
             <div class="menu-icon" onclick=menuIconFunction(this)>
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -18,10 +19,10 @@
             <div class="menu-collapse">
                 <ul>
                     <li class="active">
-                        <a href="/research/">Research</a>
+                        <a href="/research/" target="_self">Research</a>
                     </li>
                     <li>
-                        <a href="/team/">Team</a>
+                        <a href="/team/" target="_self">Team</a>
                     </li>
                 </ul>
                 <div class="hover-pill"></div>
@@ -110,6 +111,9 @@
                 </div>
                  
             </section>
+            <div> 
+                <img class="bird" src="../assets/quail_bird.svg" alt="QuaIL Logo (bird)">
+            </div>
         </main>
     </body>
 </html>
