Fixed past team styling and organized folders

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name=generator content="Hugo 0.135.0">
         <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
-        <title>RV Lab</title>
+        <title>QuaIL</title>
         <link rel=stylesheet href=main.css>
         <base target="_blank">
     </head>
