--- a/team/index.html
+++ b/team/index.html
@@ -96,7 +96,7 @@
                             <em>College of Natural Sciences</em>
                         </p>
                         <p id="bio">
-                            Professor Rozpędek is an Assistant Professor in the <a class="inline" href="https://www.cics.umass.edu/">Manning College of Information and Computer Sciences</a> and an Adjunct Assistant Professor in the <a class="inline" href="https://www.umass.edu/natural-sciences/">College of Natural Sciences</a> at the University of Massachusetts Amherst. He obtained his PhD in 2019 from <a class="inline" href="https://qutech.nl/">QuTech</a> at <a class="inline" href="https://www.tudelft.nl/en/">TU Delft</a> where he worked in <a class="inline" href="https://qutech.nl/lab/wehner-group/">Stephanie Wehner's group</a> on the building blocks of quantum networks. From 2019 to 2023, he was a postdoc in <a class="inline" href="https://pme.uchicago.edu/group/jiang-group">Liang Jiang's group</a> at the <a class="inline" href="https://pme.uchicago.edu/">Pritzker School of Molecular Engineering</a> at the <a class="inline" href="https://www.uchicago.edu/">University of Chicago</a> working on quantum repeaters for quantum communication.
+                            Professor Rozpędek is an Assistant Professor in the <a class="inline" href="https://www.cics.umass.edu/about/directory/filip-rozpedek">Manning College of Information and Computer Sciences</a> and an Adjunct Assistant Professor in the <a class="inline" href="https://www.umass.edu/physics/about/directory/filip-rozpedek">College of Natural Sciences</a> at the University of Massachusetts Amherst. He obtained his PhD in 2019 from <a class="inline" href="https://qutech.nl/">QuTech</a> at <a class="inline" href="https://www.tudelft.nl/en/">TU Delft</a> where he worked in <a class="inline" href="https://qutech.nl/lab/wehner-group/">Stephanie Wehner's group</a> on the building blocks of quantum networks. From 2019 to 2023, he was a postdoc in <a class="inline" href="https://pme.uchicago.edu/group/jiang-group">Liang Jiang's group</a> at the <a class="inline" href="https://pme.uchicago.edu/">Pritzker School of Molecular Engineering</a> at the <a class="inline" href="https://www.uchicago.edu/">University of Chicago</a> working on quantum repeaters for quantum communication.
                         </p>
                         <div class="links">
                             <a href="https://sites.google.com/view/filiprozpedek">Homepage</a> |
@@ -117,7 +117,7 @@
                             <em>Manning College of Information and Computer Sciences</em>
                         </p>
                         <p id="bio">
-                            Professor Vardoyan is an Assistant Professor in the <a class="inline" href="https://www.cics.umass.edu/">Manning College of Information and Computer Sciences</a> at the University of Massachusetts Amherst. From 2022 to 2024, Professor Vardoyan was an Assistant Professor at <a class="inline" href="https://qutech.nl/">QuTech</a>'s <a class="inline" href="https://qutech.nl/research-engineering/quantum-internet/">Quantum Internet Division</a>, and <a class="inline" href="https://www.tudelft.nl/en/eemcs">EEMCS</a>, <a class="inline" href="https://www.tudelft.nl/en/">TU Delft</a>, receiving a permanent contract in 2023. That same year, she became part-time faculty at UMass Amherst, ultimately switching to full-time in 2024. She received her PhD from UMass Amherst, where she worked on systems and networking in <a class="inline" href="https://acquire.cs.umass.edu/">Don Towsley's group</a>. Then, she was a postdoc at <a class="inline" href="https://www.tudelft.nl/en/">TU Delft</a>, where she worked with <a class="inline" href="https://qutech.nl/person/stephanie-wehner/">Stephanie Wehner</a>.
+                            Professor Vardoyan is an Assistant Professor in the <a class="inline" href="https://www.cics.umass.edu/about/directory/gayane-vardoyan">Manning College of Information and Computer Sciences</a> at the University of Massachusetts Amherst. From 2022 to 2024, Professor Vardoyan was an Assistant Professor at <a class="inline" href="https://qutech.nl/">QuTech</a>'s <a class="inline" href="https://qutech.nl/research-engineering/quantum-internet/">Quantum Internet Division</a>, and <a class="inline" href="https://www.tudelft.nl/en/eemcs">EEMCS</a>, <a class="inline" href="https://www.tudelft.nl/en/">TU Delft</a>, receiving a permanent contract in 2023. That same year, she became part-time faculty at UMass Amherst, ultimately switching to full-time in 2024. She received her PhD from UMass Amherst, where she worked on systems and networking in <a class="inline" href="https://acquire.cs.umass.edu/">Don Towsley's group</a>. Then, she was a postdoc at <a class="inline" href="https://www.tudelft.nl/en/">TU Delft</a>, where she worked with <a class="inline" href="https://qutech.nl/person/stephanie-wehner/">Stephanie Wehner</a>.
                         </p>
                         <div class="links">
                             <a href="https://people.cs.umass.edu/~gvardoyan/#home">Homepage</a> |
@@ -170,7 +170,7 @@
                         <em>Manning College of Information and Computer Sciences</em>
                     </p>
                     <p id="bio">
-                        Stav is a postdoc under Filip Rozpędek. He earned his Ph.D. in the Department of Physics and Astronomy at <a class="inline" href="https://www.lsu.edu/">Louisiana State University</a>. His research interests are theory and optimization of quantum networks, quantum time synchronization protocols, and quantum optics, especially its intersection with gravity and phase transitions in quantum many-body systems.
+                        Stav is a postdoc under Filip Rozpędek. He earned his Ph.D. in the Department of Physics and Astronomy at <a class="inline" href="https://www.lsu.edu/physics/">Louisiana State University</a>. His research interests are theory and optimization of quantum networks, quantum time synchronization protocols, and quantum optics, especially its intersection with gravity and phase transitions in quantum many-body systems.
                     </p>
                     <div class="links">
                         <a href="https://scholar.google.com/citations?user=FUF5AzIAAAAJ&hl=en">Google Scholar</a> |
@@ -282,18 +282,13 @@
             </section>
 
             <!-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
-            <section id="team-section">
-                <h2>Master Students</h2>
+            <section id="past-team">
+                <h2>Past Members</h2>
 
-                <div class="team-member">
-                    <img src="assets/snehasis-addy.jpg" alt="Snehasis Addy">
+                <div class="past-member">
                     <h3>Snehasis Addy</h3>
-                    <p>
-                        University of Massachusetts Amherst <br>
-                        <em>Manning College of Information and Computer Sciences</em>
-                    </p>
                     <p id="bio">
-                        Snehasis is a computer science PhD student at UMass Amherst. During his first year of his PhD program, he jointly worked with Filip Rozpędek and Gayane Vardoyan on topics related to Quantum Networks and Distributed Quantum Computing.
+                        Snehasis is a computer science PhD student at UMass Amherst. During the first year of his PhD program, he jointly worked with Filip Rozpędek and Gayane Vardoyan on topics related to Quantum Networks and Distributed Quantum Computing.
                     </p>
                     <div class="links">
                         <a href="https://snehasisaddy.github.io/">Homepage</a> |
@@ -303,14 +298,21 @@
                         saddy [at] umass.edu
                     </div>
                 </div>
-
-                <div class="team-member">
-                    <img src="assets/luc-barrett.jpg" alt="Luc Barrett">
-                    <h3>Luc Barrett</h3>
-                    <p>
-                        University of Massachusetts Amherst <br>
-                        <em>Manning College of Information and Computer Sciences</em>
+                
+                <div class="past-member">
+                    <h3>Ankit Kumar Jha</h3>
+                    <p id="bio">
+                        Ankit was a computer science PhD student at UMass Amherst for a year before he transferred to the <a class="inline" href="https://www.u-bordeaux.fr/en">University of Bordeaux</a> in pursuit of a physics PhD. He worked with Filip Rozpędek on Concatenated Bosonic Error Correcting Codes to design efficient quantum repeaters.
                     </p>
+                    <div class="links">
+                        <a href="https://scholar.google.com/citations?user=Olm22zUAAAAJ&hl=en">Google Scholar</a> |
+                        <a href="https://www.linkedin.com/in/ankit-kumar-jha-7b742a190">LinkedIn</a> |
+                        ankitkumarjh [at] umass.edu
+                    </div>
+                </div>
+
+                <div class="past-member">
+                    <h3>Luc Barrett</h3>
                     <p id="bio">
                         Luc, now an applied physics PhD student at Cornell University, graduated from UMass Amherst with bachelor's degrees in computer science, applied mathematics, and physics. He also earned a master's degree in computer science at UMass Amherst as a <a class="inline" href="https://www.cics.umass.edu/academics/scholarships-and-fellowships/bay-state-scholarship-program">Bay State Fellow</a>. He worked with Gayane Vardoyan and <a class="inline" href="https://lab.krastanov.org/">Stefan Krastanov</a> on optimizing quantum communication protocols using reinforcement learning.
                     </p>
@@ -318,23 +320,6 @@
                         <a href="https://www.lucbarrett.info/">Homepage</a> |
                         <a href="https://www.linkedin.com/in/luc-barrett/">LinkedIn</a> |
                         lab392 [at] cornell.edu
-                    </div>
-                </div>
-                
-                <div class="team-member">
-                    <img src="assets/ankit-kumar-jha.jpg" alt="Ankit Kumar Jha">
-                    <h3>Ankit Kumar Jha</h3>
-                    <p>
-                        University of Massachusetts Amherst <br>
-                        <em>Manning College of Information and Computer Sciences</em>
-                    </p>
-                    <p id="bio">
-                        Ankit was a computer science PhD student at UMass Amherst for a year before he transferred to the <a href="https://www.u-bordeaux.fr/en">University of Bordeaux</a> in the pursuit of condensed matter physics. He worked with Filip Rozpędek on Concatenated Bosonic Error Correcting Codes to design efficient quantum repeaters.
-                    </p>
-                    <div class="links">
-                        <a href="https://scholar.google.com/citations?user=Olm22zUAAAAJ&hl=en">Google Scholar</a> |
-                        <a href="https://www.linkedin.com/in/ankit-kumar-jha-7b742a190">LinkedIn</a> |
-                        ankitkumarjh [at] umass.edu
                     </div>
                 </div>
             </section>
