Added a favicon to the site

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
         <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
         <title>QuaIL</title>
+
+        <link rel="icon" type="image/svg+xml" href="assets/favicon-light.svg" media="(prefers-color-scheme: light)">
+        <link rel="icon" type="image/svg+xml" href="assets/favicon-dark.svg" media="(prefers-color-scheme: dark)">
+        <link rel="icon" type="image/png" href="assets/favicon-light-16x16.png" sizes="16x16" media="(prefers-color-scheme: light)">
+        <link rel="icon" type="image/png" href="assets/favicon-dark-16x16.png" sizes="16x16" media="(prefers-color-scheme: dark)">
+        <link rel="icon" type="image/png" href="assets/favicon-light-32x32.png" sizes="32x32" media="(prefers-color-scheme: light)">
+        <link rel="icon" type="image/png" href="assets/favicon-dark-32x32.png" sizes="32x32" media="(prefers-color-scheme: dark)">
         <link rel=stylesheet href=main.css>
         <base target="_blank">
     </head>
     <body>
-        <nav aria-label="main navigation" class="header">
+        <nav aria-label="main navigatio
+        n" class="header">
             <a href="/" target="_self"><img src="assets/quail.svg" alt="QuaIL Logo" class="brand" ></a>
             <div class="menu-icon" onclick=menuIconFunction(this)>
                 <div class="bar1"></div>
