--- a/team/index.html
+++ b/team/index.html
@@ -4,7 +4,7 @@
         <meta name=generator content="Hugo 0.135.0">
         <meta charset=UTF-8>
         <meta name=viewport content="width=device-width,initial-scale=1">
-        <title>Team | QuaIL</title>
+        <title>Team</title>
         <link rel=stylesheet href=../main.css>
         <base target="_blank">
     </head>
