Fixed image metadata

--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
         <meta name=viewport content="width=device-width,initial-scale=1">
         <title>QuaIL</title>
 
-        <link rel="icon" type="image/png" href="assets/favicon-light-32x32.png" sizes="32x32">
+        <!-- Standard favicon -->
+        <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+
+        <!-- Light/dark mode (modern) -->
         <link rel="icon" type="image/svg+xml" href="assets/favicon-light.svg" media="(prefers-color-scheme: light)">
         <link rel="icon" type="image/svg+xml" href="assets/favicon-dark.svg" media="(prefers-color-scheme: dark)">
-        <link rel="icon" type="image/png" href="assets/favicon-light-16x16.png" sizes="16x16" media="(prefers-color-scheme: light)">
-        <link rel="icon" type="image/png" href="assets/favicon-dark-16x16.png" sizes="16x16" media="(prefers-color-scheme: dark)">
-        <link rel="icon" type="image/png" href="assets/favicon-dark-32x32.png" sizes="32x32" media="(prefers-color-scheme: dark)">
+
+        <!-- PNG sizes for fallback -->
+        <link rel="icon" type="image/png" href="assets/favicon-light-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="assets/favicon-light-16x16.png" sizes="16x16">
+
+        <!-- Apple Touch Icon -->
+        <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+
+        <!-- Microsoft Tiles -->
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="assets/mstile-150x150.png">
+        
         <link rel=stylesheet href=main.css>
         <base target="_blank">
     </head>
