--- a/team/index.html
+++ b/team/index.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <nav aria-label="main navigation" class="header">
-            <a href="/" target="_self"><img src="../assets/quail.svg" alt="QuaIL Logo" class="brand" ></a>
+            <a href="/" target="_self"><img src="../assets/quail-brand-alt.png" alt="QuaIL Brand" class="brand" ></a>
             <div class="menu-icon" onclick=menuIconFunction(this)>
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -343,9 +343,9 @@
                     </div>
                 </div>
             </section>
-            <div> 
+            <!-- <div> 
                 <img class="bird" src="../assets/quail_bird.svg" alt="QuaIL Logo (bird)">
-            </div>
+            </div> -->
         </main>
     </body>
 </html>
