Changed image file types to .png from .svg

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
         <nav aria-label="main navigatio
         n" class="header">
-            <a href="/" target="_self"><img src="assets/quail.svg" alt="QuaIL Logo" class="brand" ></a>
+            <a href="/" target="_self"><img src="assets/quail-brand.png" alt="QuaIL Logo" class="brand" ></a>
             <div class="menu-icon" onclick=menuIconFunction(this)>
                 <div class="bar1"></div>
                 <div class="bar2"></div>
@@ -118,7 +118,7 @@
                 </div>
             </section>
             <div> 
-                <img class="bird" src="assets/quail_bird.svg" alt="QuaIL Logo (bird)">
+                <img class="bird" src="assets/quail_bird.png" alt="QuaIL Logo (bird)">
             </div>
         </main>
         <script>
