Made slight changes to sizing per request

--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
                     <div id="news-section">
                         <div class="tile">
                             <h3 class="tile-header">News</h3>
-                            <h2 class="tile-title"><a href="https://www.nature.com/articles/s41534-025-01048-3" class="tile-link">Luise's manuscript "Surrogate-guided optimization in quantum networks" publised in npj QI 🎉</a></h2>
+                            <h2 class="tile-title"><a href="https://qce.quantum.ieee.org/2025/" class="tile-link">Stav's paper "Hybrid repeaters with encoding for long distance entanglement distribution" accepted into IEEE QCE2025 🎉</a></h2>
+                            <p class="tile-date">08/01/2025</p>
+                        </div>
+                        <div class="tile">
+                            <h3 class="tile-header">News</h3>
+                            <h2 class="tile-title"><a href="https://www.nature.com/articles/s41534-025-01048-3" class="tile-link">Luise's manuscript "Surrogate-guided optimization in quantum networks" published in npj QI 🎉</a></h2>
                             <p class="tile-date">05/31/2025</p>
                         </div>
                         <div class="tile">
@@ -135,6 +140,6 @@
                 slides[slideIndex - 1].style.display = "block";  
                 setTimeout(showSlides, 10000); // Change slide every 10 seconds
             }
-            </script>
+        </script>
     </body>
 </html>
