Edited group picture on landing

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <section id=about>
                 <div class="slideshow-container">
                     <div class="slide fade">
-                        <img src="assets/2025-05-19.jpg" alt="Group picture in front of W.E.B. Du Bois Library">
+                        <img src="assets/2025-05-19-alt.png" alt="Group picture in front of W.E.B. Du Bois Library">
                         <div class="caption">May 2025</div>
                     </div>
                     <!-- <div class="slide fade">
