Added presentation for group meeting

--- a/talks/assets/2024-12-6/index.html
+++ b/talks/assets/2024-12-6/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>presentation template</title>
+        <title>Poincaré-Bendixson theorem | Agustin Garcia Flores</title>
         <meta name="author" content="Agustin Garcia Flores">
         <link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
